Bug 293430 - Changing the opening date in the account information does not change the opening balance transaction
Summary: Changing the opening date in the account information does not change the open...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-06 10:18 UTC by Thomas Baumgart
Modified: 2012-02-06 19:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2012-02-06 10:18:37 UTC
Version:           git master (using KDE 4.6.0) 
OS:                Linux

Information about account opening date is NOT updated in an existing opening balance transaction for that account when changed in the account editor. Re-editing the same account shows the updated date information, so it is stored with the account. Changes to the balance are updated in the transaction. Changing the balance and the date does not influence the date in the transaction as well.

Reproducible: Always

Steps to Reproduce:
Edit an account with existing opening balance. Change the opening date and exit with OK.

Actual Results:  
The account opening date info is updated, the date of the opening balance transaction does not change.

Expected Results:  
The account opening date info and the date of the opening balance transaction are updated.
Comment 1 Thomas Baumgart 2012-02-06 19:52:11 UTC
Git commit 720d999a079375d8b1c5215dfb4c774a94417cb4 by Thomas Baumgart.
Committed on 06/02/2012 at 20:44.
Pushed by tbaumgart into branch 'master'.

Correct post date of opening balance transaction
when the opening date changes.

M  +1    -0    kmymoney/kmymoney.cpp

http://commits.kde.org/kmymoney/720d999a079375d8b1c5215dfb4c774a94417cb4
Comment 2 Thomas Baumgart 2012-02-06 19:57:05 UTC
Git commit 8ceb9f5d52d22be269706d404c4db4c5af321845 by Thomas Baumgart.
Committed on 06/02/2012 at 20:44.
Pushed by tbaumgart into branch '4.6'.

Correct post date of opening balance transaction
when the opening date changes.
(cherry picked from commit 720d999a079375d8b1c5215dfb4c774a94417cb4)

M  +1    -0    kmymoney/kmymoney.cpp

http://commits.kde.org/kmymoney/8ceb9f5d52d22be269706d404c4db4c5af321845