BUG: 293430

Correct post date of opening balance transaction
when the opening date changes.